--- a/DuAnLamQuen/DuAnLamQuen.csproj
+++ b/DuAnLamQuen/DuAnLamQuen.csproj
@@ -74,6 +74,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="DangKyThongTin.aspx" />
+    <Content Include="Hello.aspx" />
     <Content Include="TinhToan.aspx" />
     <Content Include="MinhHoa.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
@@ -186,6 +187,13 @@
     </Compile>
     <Compile Include="DangKyThongTin.aspx.designer.cs">
       <DependentUpon>DangKyThongTin.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Hello.aspx.cs">
+      <DependentUpon>Hello.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Hello.aspx.designer.cs">
+      <DependentUpon>Hello.aspx</DependentUpon>
     </Compile>
     <Compile Include="TinhToan.aspx.cs">
       <DependentUpon>TinhToan.aspx</DependentUpon>
